ON-10580 # Removed fixed position multiple page navigation on mobile screens

--- a/src/styles/modal.scss
+++ b/src/styles/modal.scss
@@ -5,6 +5,14 @@
   @media only screen and (max-width: $tablet) {
     padding: 0 $size-8;
   }
+
+  @media only screen and (max-width: $mobile) {
+    .modal-card-foot {
+      .ob-button {
+        min-width: unset;
+      }
+    }
+  }
 }
 
 .modal-background-faded {
